# scraps

./: README.md
toy_ndb_wrapper/: CMakeLists.txt  README.md  main.go  ndb_api_wrapper.cpp  ndb_api_wrapper.h
toy_ndb_wrapper/cpp_test/: CMakeLists.txt  ndb_api_wrapper_test.cpp
toy_ndb_wrapper/ctest/: ndb_api_wrapper_test.cpp
toy_ndb_wrapper/go_test/: Makefile  main  main.go
toy_ndb_wrapper/java_test/: pom.xml
toy_ndb_wrapper/java_test/src/main/java/com/lc/test/: Main.java
toy_ndb_wrapper/java_test/src/main/resources/: log4j.properties
toy_ndb_wrapper/jtest/src/main/java/com/lc/test/: Main.java  TestTable.java
toy_ndb_wrapper/lib/: CMakeLists.txt  ndb_api_wrapper.cpp  ndb_api_wrapper.h
toy_ndb_wrapper/rust_test/: Makefile  main.rs
